# CreditScoring

./: .flake8  .gitignore  .pylintrc  Makefile  pyproject.toml
notebooks/: eda.ipynb
