[tool.poetry]
name = "creditscoring"
version = "0.1.0"
description = ""
authors = ["EfimowEgor <egor.efimowA@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.1"
fastapi = "^0.115.0"


[tool.poetry.group.dev.dependencies]
pandas = "^2.2.3"
numpy = "^2.1.1"
fastapi = "^0.115.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
