[tool.poetry]
name = "creditscoring"
version = "0.1.0"
description = ""
authors = ["EfimowEgor <egor.efimowA@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.1"
fastapi = "^0.115.0"


[tool.poetry.group.dev.dependencies]
pandas = "^2.2.3"
numpy = "^2.1.1"
fastapi = "^0.115.0"
mypy = "^1.11.2"
flake8 = "^7.1.1"
pylint = "^3.3.1"
black = "^24.8.0"
coverage = "^7.6.1"
pytest = "^8.3.3"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
